Tab support - UI Tests - Exception Report